--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-8 col-lg-6">
-        <h1 class="title">PRIVATE HIRE</h1>
+        <h1 class="title private-hire-title">PRIVATE HIRE</h1>
         <p class="private-p">We have a range of catering options for any event you might have in mind. From business meetings, working lunches to office parties, intimate occasions to grand birthday celebrations and beyond.
   Please get in touch using the form and a member of the team will be in touch to assist you.
   Our reservation lines are open from 11:00am to 7:30pm (Monday to Friday).
@@ -467,4 +467,3 @@
 </body>
 
 </html>
- 
