--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
         </div>
 
-        <div class="col-sm-12 col-md-6" id="floors">
+        <div class="col-sm-12 col-md-6 floorsDiv" id="floors">
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#rooftop-39">ROOFTOP</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#bar-38">BAR</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#restaurant-37">RESTAURANT</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#our-policy">OUR POLICY</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#">CAREERS</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#">GIFTS VOUCHERS</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFTS VOUCHERS</a></button>
 
           <img id="elevator" src="images/elevator.png" alt="" width="35px" />
 
