--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#restaurant-37">RESTAURANT</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#our-policy">OUR POLICY</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFTS VOUCHERS</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://bokanlondon.giftpro.co.uk">VOUCHERS</a></button>
 
           <img id="elevator" src="images/elevator.png" alt="" width="35px" />
 
