--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Welcome to Bōkan</title>
 
   <link rel="icon" type="image/png" href="images/bokan-logo.gif">
@@ -27,6 +26,18 @@
     </a>
     <div class="overlay-content">
       <div class="row">
+
+        <div class="col-sm-12 col-md-6 floorsDiv" id="floors">
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#rooftop-39">ROOFTOP</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#bar-38">BAR</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#restaurant-37">RESTAURANT</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#our-policy">OUR POLICY</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://bokanlondon.giftpro.co.uk">VOUCHERS</a></button>
+
+          <img id="elevator" src="images/elevator.png" alt="" width="35px" />
+        </div>
+
         <div class="col-sm-12 col-md-6" id="infos">
           <p>Floor 37-39</p>
           <p>40 Marsh Wall</p>
@@ -45,22 +56,6 @@
 
             <p>Accor Hotels</p>
           </div>
-
-
-
-        </div>
-
-        <div class="col-sm-12 col-md-6 floorsDiv" id="floors">
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#rooftop-39">ROOFTOP</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#bar-38">BAR</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#restaurant-37">RESTAURANT</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#our-policy">OUR POLICY</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://bokanlondon.giftpro.co.uk">VOUCHERS</a></button>
-
-          <img id="elevator" src="images/elevator.png" alt="" width="35px" />
-
-
         </div>
       </div>
     </div>
