--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Welcome to Bōkan</title>
 
   <link rel="icon" type="image/png" href="images/bokan-logo.gif">
@@ -45,15 +46,17 @@
             <p>Accor Hotels</p>
           </div>
 
+
+
         </div>
 
-        <div class="col-sm-12 col-md-6 floorsDiv" id="floors">
+        <div class="col-sm-12 col-md-6" id="floors">
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#rooftop-39">ROOFTOP</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#bar-38">BAR</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#restaurant-37">RESTAURANT</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#our-policy">OUR POLICY</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://bokanlondon.giftpro.co.uk">VOUCHERS</a></button>
+          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFTS VOUCHERS</a></button>
 
           <img id="elevator" src="images/elevator.png" alt="" width="35px" />
 
