--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </a>
     <div class="overlay-content">
       <div class="row">
-        <div class="col-sm-12 col-md-6" id="infos">
+        <div class="col-12 col-md-6" id="infos">
           <p>Floor 37-39</p>
           <p>40 Marsh Wall</p>
           <p>London E14 9TP</p>
@@ -45,20 +45,29 @@
 
             <p>Accor Hotels</p>
           </div>
-
-
-
         </div>
 
-        <div class="col-sm-12 col-md-6" id="floors">
+        <div class="col-12 col-md-6" id="floors">
+          <div class="floorSecond">
+
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#rooftop-39">ROOFTOP</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#bar-38">BAR</a></button>
           <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#restaurant-37">RESTAURANT</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a href="#our-policy">OUR POLICY</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
-          <button class="overlayBtns liftBtn" onclick="timeFunction()"><a target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFTS VOUCHERS</a></button>
+            <img id="elevator" src="images/elevator.png" alt="" width="35px" />
+          </div>
+          <div class="white-space">
 
-          <img id="elevator" src="images/elevator.png" alt="" width="35px" />
+          </div>
+          <div class="lift-div">
+          </div>
+
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#special-events">SPECIAL EVENTS</a></button>
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#our-policy">OUR POLICY</a></button>
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFTS VOUCHERS</a></button>
+
+
+
 
 
         </div>
@@ -109,10 +118,13 @@
         <source src="videos/bokan2.mp4"
                 type="video/mp4" />
 
-        <img class="phone-video" src="images/bokan-bar-night.jpg" />
 
         Sorry, your browser doesn't support embedded videos.
     </video>
+
+    <img id="image-bg" class="phone-video" src="images/bokan-bar-night.jpg" />
+
+
 
     <section class="about">
         <div class="row">
@@ -278,7 +290,7 @@
 
 
       <!-- ROOFTOP SECTION -->
- 
+
 
       <section class="rooftop" id="rooftop-39">
       <div class="row">
@@ -327,11 +339,11 @@
         <h1 class="title">CONTACT US</h1>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-6 contact1">
+          <div class="col-6 contact1">
             <p><i class="fas fa-phone-alt"></i> 020 3530 0550 </p>
               <p><i class="far fa-envelope"></i> hello@bokanlondon.co.uk</p>
           </div>
-          <div class="col-sm-6 contact2">
+          <div class="col-6 contact2">
             <p>Floor 37-39 </p>
             <p>40 Marsh Wall </p>
             <p>London E14 9TP</p>
@@ -415,6 +427,151 @@
 
       </div>
     </section>
+
+
+    <section class="col-sm-11 col-md-8 events-section" id="special-events">
+      <div class="white-space">
+      </div>
+
+      <div class="white-space">
+      </div>
+      <h2 class="title">SPECIAL EVENTS</h2>
+      <div class="white-space">
+      </div>
+      <h3 class="title special-events">SUNSET BUBBLES MENU AT BŌKAN 37 RESTAURANT</h3>
+
+      <p class="resto-p">Join us for the sunset at Bōkan 37 Restaurant for a complimentary glass of bubbles with 2 course meal at £39 or 3 course meal at £45 per person. *Glass of bubbles: choose from a beer, a glass of house wine, prosecco or soft drink per person only for reservations at 6pm from Wednesday to Saturday. Table reservation is for 2 hour seating.</p>
+      <div class="btnCenter">
+      <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/Sunset-Bubbles.pdf" target="_blank">VIEW OUR MENU</a></button>
+
+      </div>
+      <div class="white-space">
+      </div>
+    <div class="row">
+
+
+    <div class="col-md-6">
+
+
+      <h3 class="title special-events">FESTIVE DINING AT BŌKAN</h3>
+
+      <p class="resto-p">Our chefs have created mouthwatering menus including a delicious selection of classic Christmas dishes with modern twists and tempting desserts. Join us for fabulous drinks and festive family gathering in our fantastic restaurant and bar with breath-taking views. Full prepayment is required for our set menus on 24th, 25th & 31st December. For more information please contact Bōkan team events@bokanlondon.co.uk or +44(0)2035300517</p>
+      <div class="btnCenter">
+      <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/BOKAN-FESTIVE-BROCHURE.pdf" target="_blank">VIEW OUR MENU</a></button>
+
+      </div>
+      <div class="white-space">
+      </div>
+
+
+      </div>
+
+      <div class="col-md-6">
+
+
+      <div id="carouselExampleIndicators" class="pdf-carousel carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="menus/festive/image--000.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--001.png" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--002.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--003.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--004.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--005.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--006.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--007.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--008.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--009.png" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--010.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--011.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--012.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--013.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--014.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--015.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--016.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--017.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--018.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--019.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="menus/festive/image--020.jpg" alt="Third slide">
+      </div>
+
+
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    </div>
+
+    </div>
+    </div>
+
+
+
+    </section>
+
+    <!-- 3D MODEL SECTION -->
+  <section class="model-3d">
+    <div class="white-space"></div>
+    <h4 class="title">WALK INTO BOKAN</h4>
+    <div class="container">
+      <iframe class="responsive-iframe"
+      src="https://my.matterport.com/show/?m=LA5NLPxNGeA" frameborder="0" allowfullscreen allow="xr-spatial-tracking">
+      </iframe>
+    </div>
+
+    <div class="white-space"></div>
+  </section>
+
 
     <!-- POLICY SECTION -->
 
