--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
               <div class="virtual-v">
                   <a class="btn"  onclick="closeNav()" href="#virtualVisit">
-              Virtual visit :
+              VIRTUAL VISIT :
               <span class="fas fa-street-view"></span>
               </a>
             </div>
