--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="white-space"></div>
         </div>
 
-        <div class="col-6" id="floors" class="col-floor">
+        <div class="col-6" id="floors">
 
           <button class="overlayBtns liftBtn" onclick="closeNav()" ><a href="#rooftop-39">ROOFTOP - 39th</a></button>
           <button class="overlayBtns liftBtn" onclick="closeNav()" ><a href="#bar-38">BAR - 38th</a></button>
