--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         Sorry, your browser doesn't support embedded videos.
     </video>
 
-    <img id="image-bg" class="phone-video" src="images/bokan-view.jpg" />
+    <img id="image-bg" class="phone-video" src="images/bokan-mobile-1.jpg" />
 
 
 
