--- a/index.html
+++ b/index.html
@@ -28,17 +28,31 @@
   <div id="myNav" class="overlay">
     <div class="overlay-content">
       <div class="row">
-        <div class="col-6" id="infos">
+        <div class="col-sm-12 col-md-6" id="floors">
+
+
+          <button class="overlayBtns liftBtn" onclick="closeNav()" ><a href="#rooftop-39">ROOFTOP - 39th</a></button>
+          <button class="overlayBtns liftBtn" onclick="closeNav()" ><a href="#bar-38">BAR - 38th</a></button>
+          <button class="overlayBtns liftBtn" onclick="closeNav()"><a href="#restaurant-37">RESTAURANT - 37th</a></button>
+          <!--<img id="elevator" src="images/elevator.png" alt="" width="35px" />
+-->
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#special-events">SPECIAL EVENTS</a></button>
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#our-policy">OUR POLICY</a></button>
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFTS VOUCHERS</a></button>
+
+        </div>
+
+        <div class="col-sm-12 col-md-6" id="infos">
+
+
           <p>Floor 37-39</p>
           <p>40 Marsh Wall</p>
           <p>London E14 9TP</p>
           <p>(+44) 123 456 78</p>
-
-
             <p class="o-hours">OPENING HOURS</p>
             <p>Monday-Saturday : 6pm-10pm</p>
             <p>Sunday: 12pm-3pm</p>
-
 
               <div class="virtual-v">
                   <a class="btn"  onclick="closeNav()" href="#virtualVisit">
@@ -47,25 +61,9 @@
               </a>
             </div>
 
-
-
             <div class="white-space"></div>
         </div>
 
-        <div class="col-6" id="floors">
-
-          <button class="overlayBtns liftBtn" onclick="closeNav()" ><a href="#rooftop-39">ROOFTOP - 39th</a></button>
-          <button class="overlayBtns liftBtn" onclick="closeNav()" ><a href="#bar-38">BAR - 38th</a></button>
-          <button class="overlayBtns liftBtn" onclick="closeNav()"><a href="#restaurant-37">RESTAURANT - 37th</a></button>
-          <!--<img id="elevator" src="images/elevator.png" alt="" width="35px" />
--->
-
-          <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#special-events">SPECIAL EVENTS</a></button>
-          <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#our-policy">OUR POLICY</a></button>
-          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
-          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFTS VOUCHERS</a></button>
-
-        </div>
       </div>
     </div>
   </div>
