--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#special-events">SPECIAL EVENTS</a></button>
           <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#our-policy">OUR POLICY</a></button>
           <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
-          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFTS VOUCHERS</a></button>
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://bokanlondon.giftpro.co.uk">VOUCHERS</a></button>
 
         </div>
 
