--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
 
 
+
   <div id="myNav" class="overlay">
     <div class="overlay-content">
       <div class="row">
@@ -39,7 +40,7 @@
           <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#special-events">SPECIAL EVENTS</a></button>
           <button class="overlayBtns liftBtn"><a onclick="closeNav()" href="#our-policy">OUR POLICY</a></button>
           <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://careers.accor.com/global/en">CAREERS</a></button>
-          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://bokanlondon.giftpro.co.uk">VOUCHERS</a></button>
+          <button class="overlayBtns liftBtn"><a onclick="closeNav()" target="_blank" href="https://bokanlondon.giftpro.co.uk">GIFT VOUCHERS</a></button>
 
         </div>
 
@@ -49,7 +50,7 @@
           <p>Floor 37-39</p>
           <p>40 Marsh Wall</p>
           <p>London E14 9TP</p>
-          <p>(+44) 123 456 78</p>
+          <p class="phone-number">(+44) 123 456 78</p>
             <p class="o-hours">OPENING HOURS</p>
             <p>Monday-Saturday : 6pm-10pm</p>
             <p>Sunday: 12pm-3pm</p>
