--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Welcome to Bōkan</title>
+  <meta name="description" content="Bōkan is the destination Restaurant, Bar and Rooftop Terrace in Canary Wharf, London. The dockside beacon for artisanal food &amp; drink excellence.">
+  <title>Home - Bōkan Restaurant, Bar & Roof Terrace in Canary Wharf, London</title>
 
   <link rel="icon" type="image/png" href="images/bokan-logo.gif">
 
