--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <p>Floor 37-39</p>
           <p>40 Marsh Wall</p>
           <p>London E14 9TP</p>
-          <p class="phone-number">(+44) 123 456 78</p>
+          <p class="phone-number">020 3530 0550</p>
             <p class="o-hours">OPENING HOURS</p>
             <p>Monday-Saturday : 6pm-10pm</p>
             <p>Sunday: 12pm-3pm</p>
