--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <p>Floor 37-39</p>
           <p>40 Marsh Wall</p>
           <p>London E14 9TP</p>
-          <p class="phone-number">020 3530 0550</p>
+           <p class="phone-number">020 3530 0550</p>
             <p class="o-hours">OPENING HOURS</p>
             <p>Monday-Saturday : 6pm-10pm</p>
             <p>Sunday: 12pm-3pm</p>
@@ -78,13 +78,7 @@
       <div class="col-sm col-12 navBtns">
 
 
-        <button class="menu" onclick="toggleNav(); this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
-  <svg width="30" height="30" viewBox="0 0 100 100">
-    <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-    <path class="line line2" d="M 20,50 H 80" />
-    <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
-  </svg>
-</button>
+
 
         <span id="burgerB" class="burgerBtn" style="font-size:35px;cursor:pointer" onclick="toggleNav()">
           &#9776;
@@ -94,7 +88,7 @@
         <a class="bookingBtn navBtnsleft" href="#reservations">RESERVATIONS</a>
       </div>
 
-      <div class="col-sm brandLogo" id="fullBtn">
+      <div class="col-sm brandLogo" onclick="closeNav()" id="fullBtn">
         <span>
           <div class="brandLogoText"><a class="brandLink" href="#">BŌKAN</a></div>
           <h6 class="brandSub">UK SOURCED - EUROPEAN DINING</h6>
@@ -360,13 +354,13 @@
     <div class="contact-form">
 
       <div class="contact-form-2 col-md-6 col-lg-5">
-      <form action="/" class="form-signin shadow" method="submit">
+      <form action="mailto:hello@bokanlondon.co.uk" class="form-signin shadow" method="post">
 
         <h6 class="h6 mb-3">Have a specific enquiry? Please use the form below and we will get back to you shortly.</h6>
 
         <input type="text" name="fullName" class="form-control top" placeholder="Full Name" required />
 
-        <input type="" name="phone" class="form-control middle" placeholder="Phone Number" required />
+        <input type="" name="phone" class="form-control middle" placeholder="Phone Number" />
 
         <input type="email" name="email" class="form-control middle" placeholder="Email" required />
 
