--- a/index.html
+++ b/index.html
@@ -353,10 +353,10 @@
     </div>
     <div class="contact-form">
 
-      <div class="contact-form-2 col-md-6 col-lg-5">
+      <div class="contact-form-2 col-lg-10">
       <form action="mailto:hello@bokanlondon.co.uk" class="form-signin shadow" method="post">
 
-        <h6 class="h6 mb-3">Have a specific enquiry? Please use the form below and we will get back to you shortly.</h6>
+        <h6 class="">Have a specific enquiry? Please use the form below and we will get back to you shortly.</h6>
 
         <input type="text" name="fullName" class="form-control top" placeholder="Full Name" required />
 
@@ -377,57 +377,7 @@
 
     </section>
 
-
-    <!-- PRIVATE HIRE -->
-
-
-    <section class="private-hire" id="private-hire">
-
-    <div class="row justify-content-center">
-      <div class="col-sm-11 col-md-8 events-section">
-        <h1 class="title private-hire-title">PRIVATE HIRE</h1>
-        <p class="resto-p">We have a range of catering options for any event you might have in mind. From business meetings, working lunches to office parties, intimate occasions to grand birthday celebrations and beyond.
-  Please get in touch using the form and a member of the team will be in touch to assist you.
-  Our reservation lines are open from 11:00am to 7:30pm (Monday to Friday).
-  </p>
-      </div>
-    </div>
-
-      </section>
-
-
-      <!-- RESERVATIONS SECTION -->
-
-      <section id="reservations">
-  <div class="white-space"></div>
-    <h1 class="title">MAKE YOUR RESERVATION</h1>
-      <div class="reservation">
-        <form class="shadow-lg p-3">
-
-          <input type="text" name="fname" placeholder="First Name" class="form-control top" />
-
-          <input type="text" name="lname" placeholder="Last Name" class="form-control middle" />
-
-          <input type="email" name ='email' placeholder="Email address" class="form-control middle" />
-
-          <input type="tel" placeholder="Phone #" class="form-control middle" />
-
-          <input type='date' placeholder="Date" class="form-control middle"/>
-
-          <input type='time' placeholder="Time" class="form-control middle" />
-
-          <input type="number" placeholder="Guests #" class="form-control middle" />
-
-          <textarea name="comments" id="" cols="50" rows="5"  placeholder="Special Requests" class="form-control bottom"></textarea>
-
-          <button class="btn btn-lg btn-dark btn-block" type="submit">Submit</button>
-
-          </form>
-
-
-      </div>
-    </section>
-
+    <!-- SPECIAL EVENTS -->
 
     <section class="col-sm-11 col-md-8 events-section" id="special-events">
       <div class="white-space">
@@ -469,11 +419,14 @@
       <div class="col-md-6">
 
 
-      <div id="carouselExampleIndicators" class="pdf-carousel carousel slide" data-ride="carousel">
+      <div id="carouselEvents" class="pdf-carousel carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselEvents" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselEvents" data-slide-to="1"></li>
+      <li data-target="#carouselEvents" data-slide-to="2"></li>
+      <li data-target="#carouselEvents" data-slide-to="3"></li>
+      <li data-target="#carouselEvents" data-slide-to="4"></li>
+      <li data-target="#carouselEvents" data-slide-to="5"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -542,11 +495,11 @@
 
 
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselEvents" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselEvents" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -558,6 +511,60 @@
 
 
     </section>
+
+
+
+
+
+      <!-- RESERVATIONS SECTION -->
+
+      <section id="reservations">
+  <div class="white-space"></div>
+    <h1 class="title">MAKE YOUR RESERVATION</h1>
+      <div class="reservation">
+        <form class="shadow-lg p-3">
+
+          <input type="text" name="fname" placeholder="First Name" class="form-control top" />
+
+          <input type="text" name="lname" placeholder="Last Name" class="form-control middle" />
+
+          <input type="email" name ='email' placeholder="Email address" class="form-control middle" />
+
+          <input type="tel" placeholder="Phone #" class="form-control middle" />
+
+          <input type='date' placeholder="Date" class="form-control middle"/>
+
+          <input type='time' placeholder="Time" class="form-control middle" />
+
+          <input type="number" placeholder="Guests #" class="form-control middle" />
+
+          <textarea name="comments" id="" cols="50" rows="5"  placeholder="Special Requests" class="form-control bottom"></textarea>
+
+          <button class="btn btn-lg btn-dark btn-block" type="submit">Submit</button>
+
+          </form>
+
+
+      </div>
+    </section>
+
+    <!-- PRIVATE HIRE -->
+
+
+    <section class="private-hire" id="private-hire">
+
+    <div class="row justify-content-center">
+      <div class="col-sm-11 col-md-8 events-section">
+        <h1 class="title private-hire-title">PRIVATE HIRE</h1>
+        <p class="resto-p">We have a range of catering options for any event you might have in mind. From business meetings, working lunches to office parties, intimate occasions to grand birthday celebrations and beyond.
+  Please get in touch using the form and a member of the team will be in touch to assist you.
+  Our reservation lines are open from 11:00am to 7:30pm (Monday to Friday).
+  </p>
+      </div>
+    </div>
+
+      </section>
+
 
     <!-- 3D MODEL SECTION -->
   <section class="model-3d" id="virtualVisit">
