--- a/index.html
+++ b/index.html
@@ -560,6 +560,7 @@
   Please get in touch using the form and a member of the team will be in touch to assist you.
   Our reservation lines are open from 11:00am to 7:30pm (Monday to Friday).
   </p>
+  <img class="private-hire-img" src="images/bokan-area.jpeg" alt="">
       </div>
     </div>
 
