--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     <div class="row">
 
 
-    <div class="col-md-6">
+    <div class="col-xs-6 col-md-12 col-lg-6">
 
 
       <h3 class="title special-events">FESTIVE DINING AT BŌKAN</h3>
@@ -416,7 +416,7 @@
 
       </div>
 
-      <div class="col-md-6">
+      <div class="col-xs-6 col-md-12 col-lg-6">
 
 
       <div id="carouselEvents" class="pdf-carousel carousel slide" data-ride="carousel">
