--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Bōkan is the destination Restaurant, Bar and Rooftop Terrace in Canary Wharf, London. The dockside beacon for artisanal food &amp; drink excellence.">
+  <meta name="format-detection" content="telephone=no">
   <title>Home - Bōkan Restaurant, Bar & Roof Terrace in Canary Wharf, London</title>
 
   <link rel="icon" type="image/png" href="images/bokan-logo.gif">
@@ -46,7 +47,6 @@
 
         <div class="col-sm-12 col-md-6" id="infos">
 
-
           <p>Floor 37-39</p>
           <p>40 Marsh Wall</p>
           <p>London E14 9TP</p>
@@ -84,8 +84,8 @@
           &#9776;
         </span>
 
-        <a class="navBtnsleft" href="#contact-us">CONTACT</a>
-        <a class="bookingBtn navBtnsleft" href="#reservations">RESERVATIONS</a>
+        <a class="navBtnsleft" href="#contact-us" onclick="closeNav()">CONTACT</a>
+        <a class="bookingBtn navBtnsleft" href="#reservations" onclick="closeNav()">RESERVATIONS</a>
       </div>
 
       <div class="col-sm brandLogo" onclick="closeNav()" id="fullBtn">
