--- a/index.html
+++ b/index.html
@@ -183,16 +183,12 @@
            Bōkan 37 creates a warm, inviting & relaxed dining experience with a menu that will take your taste-buds on a journey of European discovery.
          Florian and his team are proud to offer you an experience that you won't forget.</p>
 
-        <h4 class="brunch">BOTTOMLESS BRUNCH - £52 PER PERSON</h4>
-        <p class="resto-p">With a backdrop of stunning views, kick start your weekend with a lavish bottomless brunch. Chef Guillaume has created a seasonal and stylish three-course menu to enjoy alongside endless prosecco in the laid-back yet luxe Bōkan 37 Restaurant.</p>
-
-
 
 
         <p class="resto-p">* Menus are subject to change as Chef Guillaume and his brigade offer you only the best seasonal produce to your table.</p>
         <div class="btnCenter">
         <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/restaurant-menu.pdf" target="_blank">RESTAURANT MENU</a></button>
-        <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/special-menu.pdf" target="_blank">BRUNCH MENU</a></button>
+
         </div>
       </div>
 
@@ -392,11 +388,20 @@
 
       <p class="resto-p">Join us for the sunset at Bōkan 37 Restaurant for a complimentary glass of bubbles with 2 course meal at £39 or 3 course meal at £45 per person. *Glass of bubbles: choose from a beer, a glass of house wine, prosecco or soft drink per person only for reservations at 6pm from Wednesday to Saturday. Table reservation is for 2 hour seating.</p>
       <div class="btnCenter">
-      <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/Sunset-Bubbles.pdf" target="_blank">VIEW OUR MENU</a></button>
-
+      <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/Sunset-Bubbles.pdf" target="_blank">SUNSET BUBBLES MENU</a></button>
       </div>
+
       <div class="white-space">
       </div>
+
+      <div class="">
+        <h4 class="title special-events">BOTTOMLESS BRUNCH - £52 PER PERSON</h4>
+        <p class="resto-p">With a backdrop of stunning views, kick start your weekend with a lavish bottomless brunch.
+          Chef Guillaume has created a seasonal and stylish three-course menu to enjoy alongside endless prosecco in the laid-back yet luxe Bōkan 37 Restaurant.</p>
+        </div>
+        <div class="btnCenter">
+          <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/special-menu.pdf" target="_blank">BRUNCH MENU</a></button>
+        </div>
     <div class="row">
 
 
@@ -407,7 +412,7 @@
 
       <p class="resto-p">Our chefs have created mouthwatering menus including a delicious selection of classic Christmas dishes with modern twists and tempting desserts. Join us for fabulous drinks and festive family gathering in our fantastic restaurant and bar with breath-taking views. Full prepayment is required for our set menus on 24th, 25th & 31st December. For more information please contact Bōkan team events@bokanlondon.co.uk or +44(0)2035300517</p>
       <div class="btnCenter">
-      <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/BOKAN-FESTIVE-BROCHURE.pdf" target="_blank">VIEW OUR MENU</a></button>
+      <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/BOKAN-FESTIVE-BROCHURE.pdf" target="_blank">FESTIVE MENU</a></button>
 
       </div>
       <div class="white-space">
@@ -608,7 +613,7 @@
       </section>
 
       <footer class="fixed-footer text-muted">
-
+      
     <p>PR Enquiries: bokan@rochecom.com <br />
     Careers: careers@bokanlondon.co.uk</p>
     <p id="footer-date">© Accor Hotels Ltd</p>
