--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <p class="resto-p">With a backdrop of stunning views, kick start your weekend with a lavish bottomless brunch.
           Chef Guillaume has created a seasonal and stylish three-course menu to enjoy alongside endless prosecco in the laid-back yet luxe Bōkan 37 Restaurant.</p>
         </div>
-        <div class="btnCenter">
+        <div class="btnCenter brunch-btn">
           <button type="button" class="btn btn-light btn-lg menuResto"><a href="menus/special-menu.pdf" target="_blank">BRUNCH MENU</a></button>
         </div>
     <div class="row">
@@ -613,7 +613,7 @@
       </section>
 
       <footer class="fixed-footer text-muted">
-      
+
     <p>PR Enquiries: bokan@rochecom.com <br />
     Careers: careers@bokanlondon.co.uk</p>
     <p id="footer-date">© Accor Hotels Ltd</p>
