--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
 
 <body>
 
-
-
   <div id="myNav" class="overlay">
     <div class="overlay-content">
       <div class="row">
@@ -526,32 +524,44 @@
       <section id="reservations">
   <div class="white-space"></div>
     <h1 class="title">MAKE YOUR RESERVATION</h1>
-      <div class="reservation">
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <div class="white-space"></div>
+        <h5 class="title2"><strong>BAR</strong></h5>
         <form class="shadow-lg p-3">
-
           <input type="text" name="fname" placeholder="First Name" class="form-control top" />
-
           <input type="text" name="lname" placeholder="Last Name" class="form-control middle" />
-
           <input type="email" name ='email' placeholder="Email address" class="form-control middle" />
-
           <input type="tel" placeholder="Phone #" class="form-control middle" />
-
           <input type='date' placeholder="Date" class="form-control middle"/>
-
           <input type='time' placeholder="Time" class="form-control middle" />
-
           <input type="number" placeholder="Guests #" class="form-control middle" />
-
           <textarea name="comments" id="" cols="50" rows="5"  placeholder="Special Requests" class="form-control bottom"></textarea>
-
           <button class="btn btn-lg btn-dark btn-block" type="submit">Submit</button>
-
           </form>
-
-
       </div>
-    </section>
+      <div class="col-12 col-md-6">
+        <div class="white-space"></div>
+        <h5 class="title2"><strong>RESTAURANT</strong></h5>
+        <form class="shadow-lg p-3">
+          <input type="text" name="fname" placeholder="First Name" class="form-control top" />
+          <input type="text" name="lname" placeholder="Last Name" class="form-control middle" />
+          <input type="email" name ='email' placeholder="Email address" class="form-control middle" />
+          <input type="tel" placeholder="Phone #" class="form-control middle" />
+          <input type='date' placeholder="Date" class="form-control middle"/>
+          <input type='time' placeholder="Time" class="form-control middle" />
+          <input type="number" placeholder="Guests #" class="form-control middle" />
+          <textarea name="comments" id="" cols="50" rows="5"  placeholder="Special Requests" class="form-control bottom"></textarea>
+          <button class="btn btn-lg btn-dark btn-block" type="submit">Submit</button>
+          </form>
+      </div>
+
+
+    </div>
+  </div>
+  </section>
 
     <!-- PRIVATE HIRE -->
 
